[package]
name = "bwapi"
version = "0.2.0"
authors = ["Dmitry Kashitsyn <korvin@deeptown.org>", "Roman Proskuryakov <humbug@deeptown.org>"]
keywords = ["starcraft", "broodwar", "api", "binding"]
repository = "https://github.com/RnDome/bwapi-rs"
description = "Rust bindings to the Starcraft Broodwar game API"
license = "Unlicense/MIT"

[dependencies]
bwapi-sys = "0.1.2"

[[example]]
name = "dll"
crate-type = ["cdylib"]

[[example]]
name = "client"

[profile.release]
debug = true
